[package]
name = "tm-anode-api"
version = "0.5.1"
license = "MIT OR Apache-2.0"
description = "API for the tm-anode The Machinery plugin"
repository = "https://github.com/celphase/anode"
edition = "2018"

[dependencies]
const-cstr = "0.3.0"
machinery = "0.12.0"
machinery-api = "0.5.0"
tree-sitter = "0.20.0"
